use generics in HeapPriority Queues and LinkedList instead of ArrayList